# PriviMW-Wallet

./: .gitignore  .gitmodules  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mw/beam/beamwallet/core/: Api.kt
app/src/main/java/com/mw/beam/beamwallet/core/entities/: Wallet.kt
app/src/main/java/com/mw/beam/beamwallet/core/entities/dto/: AssetInfoDTO.kt  ContractConsentDTO.kt  ExchangeRateDTO.kt  NotificationDTO.kt  PaymentInfoDTO.kt  SystemStateDTO.kt  TransactionParametersDTO.kt  TxDescriptionDTO.kt  UtxoDTO.kt  VersionInfoDTO.kt  WalletAddressDTO.kt  WalletStatusDTO.kt
app/src/main/java/com/mw/beam/beamwallet/core/listeners/: WalletListener.kt
app/src/main/java/com/privimemobile/: MainActivity.kt  PriviMWApp.kt
app/src/main/java/com/privimemobile/chat/: ChatService.kt  LegacyMigration.kt
app/src/main/java/com/privimemobile/chat/contacts/: ContactManager.kt
app/src/main/java/com/privimemobile/chat/db/: ChatDatabase.kt
app/src/main/java/com/privimemobile/chat/db/dao/: AttachmentDao.kt  ChatStateDao.kt  ContactDao.kt  ConversationDao.kt  GroupDao.kt  MessageDao.kt  PendingTxDao.kt  ReactionDao.kt
app/src/main/java/com/privimemobile/chat/db/entities/: AttachmentEntity.kt  ChatStateEntity.kt  ContactEntity.kt  ConversationEntity.kt  GroupEntity.kt  MessageEntity.kt  MessageFts.kt  PendingTxEntity.kt  ReactionEntity.kt
app/src/main/java/com/privimemobile/chat/group/: GroupManager.kt  PendingTxManager.kt
app/src/main/java/com/privimemobile/chat/identity/: IdentityManager.kt
app/src/main/java/com/privimemobile/chat/notification/: ChatNotificationManager.kt
app/src/main/java/com/privimemobile/chat/processor/: MessageProcessor.kt
app/src/main/java/com/privimemobile/chat/transport/: IpfsTransport.kt  SbbsTransport.kt
app/src/main/java/com/privimemobile/chat/voice/: VoicePlaybackController.kt  VoiceRecorder.kt  VoiceRecorderJni.kt  VoiceWaveformView.kt
app/src/main/java/com/privimemobile/dapp/: BeamDAppWebView.kt  DAppActivity.kt  DAppResponseRouter.kt  NativeTxApprovalDialog.kt
app/src/main/java/com/privimemobile/protocol/: Config.kt  ContactResolver.kt  DAppManager.kt  DAppStore.kt  FileCache.kt  FileCrypto.kt  FileSharing.kt  Helpers.kt  LocaleHelper.kt  MessageProcessor.kt  NodeReconnect.kt  ProtocolStartup.kt  ProtocolStorage.kt  SbbsMessaging.kt  SecureStorage.kt  ShaderInvoker.kt  Types.kt  WalletApi.kt
app/src/main/java/com/privimemobile/ui/auth/: LockScreen.kt  OnboardingScreen.kt
app/src/main/java/com/privimemobile/ui/chat/: ChatScreen.kt  ChatsScreen.kt  ContactInfoScreen.kt  CreateGroupScreen.kt  GroupChatScreen.kt  GroupSettingsScreen.kt  MediaGalleryScreen.kt  NewChatScreen.kt  RegisterScreen.kt  SearchScreen.kt
app/src/main/java/com/privimemobile/ui/components/: AssetIcon.kt  AvatarDisplay.kt  AvatarPicker.kt  VoiceMessageBubble.kt
app/src/main/java/com/privimemobile/ui/dapps/: DAppScreen.kt  DAppStoreBrowseScreen.kt  DAppsScreen.kt  PublishersScreen.kt
app/src/main/java/com/privimemobile/ui/navigation/: AppNavigation.kt
app/src/main/java/com/privimemobile/ui/settings/: SettingsScreen.kt
app/src/main/java/com/privimemobile/ui/theme/: Color.kt  Theme.kt
app/src/main/java/com/privimemobile/ui/wallet/: AddressesScreen.kt  AssetDetailScreen.kt  AssetTxHistoryScreen.kt  CreateOfferScreen.kt  PortraitCaptureActivity.kt  QRScannerScreen.kt  ReceiveScreen.kt  SendConfirmScreen.kt  SendScreen.kt  SplitCoinsSheet.kt  SwapScreen.kt  TransactionDetailScreen.kt  TransactionHistoryScreen.kt  UTXOScreen.kt  WalletScreen.kt
app/src/main/java/com/privimemobile/wallet/: BackgroundService.kt  CsvExportUtil.kt  CurrencyManager.kt  PortfolioSnapshotStore.kt  SplitCoinsAnalyzer.kt  SwapManager.kt  TxAuthHelper.kt  TxNotificationManager.kt  UpdateChecker.kt  WalletEventBus.kt  WalletManager.kt
app/src/main/jni/: CMakeLists.txt  LICENSE.opus  voice.c
app/src/main/res/drawable/: ic_launcher_background.xml  ic_notification.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-be/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fi/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-id/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sr/: strings.xml
app/src/main/res/values-sv/: strings.xml
app/src/main/res/values-th/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/values-zh/: strings.xml
gradle/: libs.versions.toml
